# reactions

./: .clang-format  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  MANIFEST.in  README.md  pytest.ini  repository  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
cmake/: ReactionsConfig.cmake.in
docs/: Doxyfile  Makefile  requirements.txt
docs/source/: .gitignore  conf.py  index.rst  installation.rst  reference.rst  syntax.rst
docs/source/_static/: CPP_INTRODUCTION.md
docs/source/auxiliar/: CPP_INTRODUCTION.md
docs/source/notebooks/: user_guide.ipynb
include/reactions/: all.hpp  database.hpp  database_pdg.hpp.in  element_traits.hpp  exceptions.hpp  fields.hpp  nubase.hpp.in  pdg.hpp.in  pow_enum.hpp  processes.hpp  tokens.hpp  units.hpp  utils.hpp
python/reactions/: __init__.py  __main__.py
python/reactions/data/: ParticleTable.txt  nubase_2020.txt  pdg_mass_width_2020.mcd  pdg_mass_width_2020.txt
python/src/: capi.cpp  chains.hpp  composites.hpp  database.hpp  element.hpp  element_nubase.hpp  element_pdg.hpp  element_string.hpp  errors.hpp  node.hpp  reactions.cpp  system_of_units.hpp  types.hpp  utils.hpp
scripts/: display-pdg-elements.py  display-pdg-table.py  display-table.py  expand-pdg-table.py  generate-nubase-table.py  generate-pdg-table.py  latex-name-buffers.py  pdg-latex-name-buffers.py  table.txt
src/: composites.hpp  database.hpp  element.hpp  element_pdg.hpp  element_string.hpp  errors.hpp  node.hpp  reactions.cpp  types.hpp
test/cmake/: CMakeLists.txt  build-and-run  build-and-run.py  main.cpp
test/cpp/: test_database.cpp  test_elements.cpp  test_processes.cpp  test_utils.hpp
test/python/: helpers.py  requirements.txt  test_database.py  test_elements.py  test_external.py  test_global.py  test_nodes.py  test_processes.py  test_units.py
