[aliases]
test=pytest

[tool:pytest]
addopts=--verbose
python_files="test/python/*.py"

[metadata]
author="Miguel Ramos Pernas"
author_email="miguel.ramos.pernas@gmail.com"
version=attr: reactions.__version__
license=MIT
license_file=LICENSE.txt
url=https://github.com/mramospe/reactions
doc_url=https://reactions.readthedocs.io/en/latest
